--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,18 @@ body {
   z-index: -100; }
   .shape div {
     margin: 0 2rem; }
+
+.app-info {
+  width: 100%;
+  height: 100vh;
+  background: red;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+  .app-info__text {
+    font-size: 2rem;
+    color: #FFF; }
+  .app-info__img {
+    height: 100%;
+    background: url(../img/fullphone-x.svg);
+    background-repeat: no-repeat; }
