--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
 @import "base";
+@import "variables";
+@import "mixins";
+@import "grid";
 @import "layout";
 @import "components";
 @import "header";
