--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,61 @@ body {
   font-weight: 400;
   line-height: 1.6; }
 
+/*
+0 - 600px:    Phone
+600 - 900px:  Tablet Potriat
+900 - 1200px  Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :    big Desktops
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > genral layout + grid > page layout > component
+*/
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+
 .wrapper {
   width: 100%;
   max-width: 110rem;
@@ -102,15 +157,31 @@ body {
 
 .app-info {
   width: 100%;
-  height: 100vh;
-  background: red;
-  display: flex;
-  flex-direction: row;
-  justify-content: center; }
+  height: 100vh; }
   .app-info__text {
+    margin: 40% 0 0 20%; }
+  .app-info__icons {
+    margin-left: 0; }
+  .app-info__title {
+    margin: 3rem 0;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    font-size: 3rem;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase; }
+  .app-info__detail {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.5rem;
     font-size: 2rem;
-    color: #FFF; }
+    color: var(--color-dark-gray); }
   .app-info__img {
-    height: 100%;
-    background: url(../img/fullphone-x.svg);
-    background-repeat: no-repeat; }
+    display: flex;
+    margin-top: 20%;
+    margin-left: 20%; }
+
+.app-info--2 {
+  background: var(--color-panache); }
