--- a/sass/_appInfo.scss
+++ b/sass/_appInfo.scss
@@ -1,17 +1,39 @@
 .app-info {
     width: 100%;
     height: 100vh;
-    background: red;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     &__text {
+        margin: 40% 0 0 20%;
+    }
+    &__icons {
+        margin-left: 0;
+    }
+    &__title {
+        margin: 3rem 0;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        font-size: 3rem;
+        letter-spacing: 0.1rem;
+        text-transform: uppercase;
+
+    }
+    &__detail {
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 2.5rem;
         font-size: 2rem;
-        color: #FFF;
+        color: var(--color-dark-gray);
     }
     &__img {
-        height: 100%;
-        background: url(../img/fullphone-x.svg);
-        background-repeat: no-repeat;
+        display: flex;
+        margin-top: 20%;
+        margin-left: 20%;
+
     }
+}
+.app-info--2 {
+    background: var(--color-panache);
+    
 }
