--- a/css/style.css
+++ b/css/style.css
@@ -185,3 +185,29 @@ ORDER: Base + typography > genral layout + grid > page layout > component
 
 .app-info--2 {
   background: var(--color-panache); }
+
+.cta {
+  width: 100%;
+  height: 30rem;
+  background: var(--color-lvory);
+  position: relative; }
+  .cta__box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .cta__title {
+    text-align: center;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    letter-spacing: .5rem; }
+  .cta__text {
+    color: var(--color-dark-gray);
+    text-align: center;
+    font-size: 2rem; }
+  .cta__icons {
+    text-align: center; }
+    .cta__icons img {
+      margin: 10%;
+      width: 3.8rem;
+      height: 3.8rem; }
