--- a/_footer.scss
+++ b/_footer.scss
@@ -11,7 +11,8 @@
         transform: translate(-50%, -50%);
         flex-direction: row;
         justify-content: space-between;
-        opacity: .6;
+        mix-blend-mode: soft-light;
+        opacity: 0.5;
         &__polygon {
             margin-right: 18rem;
         }
@@ -37,7 +38,7 @@
         text-align: center;
         color: var(--color-lvory);
         margin-top: .9rem;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
     &__links {
         text-align: center;
